<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2010 Erik Byström.
  
  This file is part of Rubik's Cube Algorithms.
  
  Rubik's Cube Algorithms is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Rubik's Cube Algorithms is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Rubik's Cube Algorithms.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name">Algorithms</string>
    <string name="app_shortcut">Algorithms Quick List</string>
    <string name="app_quicklist">Quick List</string>
    
    <string name="messageTitle">Changes in Algorithms</string>
    <string name="message">
    	Sorry for the delayed update, i have had a busy couple of weeks at work. This update
    	contains a fix for the upgrade problems, the no-favorite-crash and a bug with 
    	text size on different resolution devices. I\'ve also made sure the built-in 
    	algorithms are locked from editing.\n
    	I would like to remind you that the tracker on http://goo.gl/n3V1D is a good place
    	to report and view known issues.
    </string>

	<string name="firststart_title">Welcome to Algorithms</string>    
    <string name="firststart_message">
    	This application is a dictionary over the algorithms used for solving the last 
    	layer of Rubik\'s cube using the Friedrich method.\n\nIf you\'re not familiar 
    	with the notations used for describing algorithms please read the notation 
    	page carefully. It is accessed by pressing menu and choosing Notation.
    	\n\nPlease visit the project page for more information, http://goo.gl/n3V1D
    	\n\nEnjoy!
    </string>
    
    <string name="quicklist_no_permutations">No permutations in the quick list.\nTo a permutation, long press on one in the grid.</string>
    
    <string name="additionalAlgorithms">Alternative algorithms:</string>

	<string name="error_invalid_algorithm">Invalid algorithm syntax</string>
	<string name="error_edit_builtin">Built-in algorithms can\'t be edited</string>
	<string name="msg_algorithm_saved">Algorithm saved</string>
	<string name="confirm_algorithm_remove">Do you really want to delete this algorithm?</string>
	
    <string name="favorite_algorithm_changed">Algorithm changed</string>
    <string name="favorite_title">Set favorite algorithm</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- List -->
    <string name="header_oll">Orient Last Layer</string>
    <string name="header_pll">Position Last Layer</string>
    <string name="header_f2l">First Two Layers</string>
    
    <!-- Menu -->
    <string name="menu_info">Help</string>
    <string name="menu_notation">Notation</string>
    <string name="menu_properties">Preferences</string>
    <string name="menu_filtered">Quick list</string>
    <string name="menu_grid">Permutations</string>
    <string name="menu_new">New algorithm</string>
    <string name="menu_select">Switch algorithm</string>
    <string name="menu_more">More</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    
    <!-- Dialog -->
	<string name="quicklist_add">Do you want to add \'%s\' to the quick list?</string>
	<string name="quicklist_remove">Do you want to remove \'%s\' from the quick list?</string>
	
	<!-- Preferences -->
	<string name="category_application">Application</string>
	<string name="category_notation">Notation</string>
	<string name="category_system">System</string>
		
	<!-- General -->
	<string name="pref_quicklistsort_title">Sort quick list by usage</string>
	<string name="pref_quicklistsort_summary">Sort the permutations in the quick list by the number of times they\'ve been used.</string>
	<string name="pref_quicklistsort_default">false</string>

	<!-- Notation Type -->
	<string name="pref_notation_title">Notation scheme</string>	
	<string name="pref_notation_summary">The notation to use</string>
	<string name="pref_notation_default">Singmaster</string>
	<string-array name="pref_notation_entries">
		<item>Singmaster</item>
		<item>WCA</item>
	</string-array>
	
	<!-- Double Notation Format -->
	<string name="pref_double_title">Half turn format</string>	
	<string name="pref_double_summary">Format options for half turns</string>
	<string name="pref_double_default">Superscript</string>
	<string-array name="pref_double_entries">
		<item>Superscript</item>
		<item>Normal</item>
		<item>Subscript</item>
	</string-array>	
		 
	<string name="pref_trigger_title">Show triggers</string>
	<string name="pref_trigger_summary">Group trigger moves in parentheses</string>
	<string name="pref_trigger_default">true</string>

	<string name="pref_reverse_title">Counter-clockwise</string>
	<string name="pref_reverse_summary">Use a darker color for counter-clockwise rotations</string>
	<string name="pref_reverse_default">true</string>

	<string name="pref_reset_title">Reset statistics</string>
	<string name="pref_reset_summary">Reset the permutation usage statistics.</string>
	<string name="pref_reset_toast">All usage statistics deleted.</string>

	<!-- Notation text -->
	<string name="notation_header">Notation</string>
	<string name="notation_text">A turn of layer is written by adding a suffix to the face\'s name. All moves should be applied as if you were looking at the face straight-on. Using the U face as an example here are all three cases:\n\nU - A 90-degree clockwise turn.\nU\' - A 90-degree counterclockwise turn.\nU2 - A 180-degree turn.</string>

	<!-- Info -->	
	<string name="help_intro">
		To better be able to use all of the features in this application it\'s recommended 
		to read	through the following brief documentation of each screen in the application.
	</string>
	
	<string name="help_perm_header">Permutation grid</string>
	<string name="help_perm_text">
		On this screen you get an overview of all the cube permutations that the application 
		has solutions for. You can scroll up and down until you find the case you\'re looking 
		for and then click on the image to view algorithms for that permutation. 
		\n\nTo <u>add a permutation to the quick list</u>, long press on a permutation and a small 
		dialog will appear where you have the choice of adding/removing it to/from the quick list.
	</string>

	<string name="help_quick_header">Quick list</string>
	<string name="help_quick_text">
		The quick list is a list of permutations and the chosen algorithm for each of them. 
		The list can be sorted by the name of the permutation or by the number of times the 
		user it, this is done in the preferences.
		\n\nBy clicking on an item you get to the corresponding algorithm view. If you long press
		on an item you will get a dialog where you can <u>remove the item from the quick list</u>.
	</string>
	
	<string name="help_algo_header">Algorithm view</string>
	<string name="help_algo_text">
		In the algorithm view you see the chosen algorithm for the current permutation.
		\n\nTo <u>change the algorithm</u>, click on the algorithm to show the selection 
		dialog. In this dialog you can select an algorithm you like better. You can also 
		access the dialog from the menu.
		\n\nTo <u>add an algorithm</u>, click on the corresponding menu item. 
		In the input mode you type the algorithm, in Singmaster notation, and press save to
		store it.
		\nIf you want to <u>edit or delete an algorithm</u> just long press on it. 
	</string>

	<string name="help_info_header">About</string>
	<string name="help_info_text">
		I would like to acknowledge and thank the people who helped me with the application:
		\n- Patrick Kelly, algorithms (speedsolving.com)
		\n- Steven Partridge, testing and ideas.
		\n- Elin Lilius, layout and UI design.
		\n\nAll feedback/bugs/feature requests are welcome, it\'s always nice to hear from 
		the users. Use the button below to send me an email, visit the google group at 
		http://goo.gl/3Mh3k or the project page at http://goo.gl/n3V1D
	</string>
	<string name="feedback">Send Email</string>
	<string name="email_chooser">Select email application</string>
	
	
	<!-- Rubik Input Method -->
	
	<string name="input_rubiks_method">Rubik\'s Cube Input</string>
</resources>
